Se anade la validacion de errrores
-Se excluyen archivos con aristas repetidas
-Se excluyen archivos con vertices repetidas
-Se excluyen archivos con tipos no correspondientes
-Se excluyen archivos con aristas con destino u origen que no esta dentro de las vertices del grafo